fix video by category and date endpoint
